--- a/Make.config
+++ b/Make.config
@@ -1,5 +1,5 @@
 # Path to your Lua C library directory (LUA_CPATH)
-LUA_DIR = /usr/local/lib/lua/5.1
+LUA_LIBDIR = /usr/local/lib/lua/5.1
 
 # Some distros require, for example, lua5.1 here
 LUA_LIBNAME = lua
